build-log.txt
31450:% nix develop -c zig build -Dtarget=aarch64-linux-gnu && mv zig-out/bin/sigexec out/sigexec-aarch64-linux-gnu
warning: Git tree '/home/edwlan/git_repos/github.com/fiddlerwoaroof/sigexec' is dirty
install
└─ install sigexec
   └─ compile exe sigexec Debug aarch64-linux-gnu 1 errors
src/main.zig:3:16: error: root source file struct 'std' has no member named 'net'
const net = std.net;
            ~~~^~~~
/nix/store/5x5y75rc3l43ic0lwal6wzk7wi1ga3m1-zig-0.16.0/lib/zig/std/std.zig:1:1: note: struct declared here
pub const AutoHashMap = hash_map.AutoHashMap;
^~~
referenced by:
    main: src/main.zig:15:18
    callMain [inlined]: /nix/store/5x5y75rc3l43ic0lwal6wzk7wi1ga3m1-zig-0.16.0/lib/zig/std/start.zig:737:30
    callMainWithArgs [inlined]: /nix/store/5x5y75rc3l43ic0lwal6wzk7wi1ga3m1-zig-0.16.0/lib/zig/std/start.zig:638:20
    posixCallMainAndExit: /nix/store/5x5y75rc3l43ic0lwal6wzk7wi1ga3m1-zig-0.16.0/lib/zig/std/start.zig:590:38
    2 reference(s) hidden; use '-freference-trace=6' to see all references
error: 1 compilation errors
failed command: /nix/store/5x5y75rc3l43ic0lwal6wzk7wi1ga3m1-zig-0.16.0/bin/zig build-exe -ODebug -target aarch64-linux-gnu -mcpu baseline -Mroot=/home/edwlan/git_repos/github.com/fiddlerwoaroof/sigexec/src/main.zig --cache-dir .zig-cache --global-cache-dir /home/edwlan/.cache/zig --name sigexec --zig-lib-dir /nix/store/5x5y75rc3l43ic0lwal6wzk7wi1ga3m1-zig-0.16.0/lib/zig/ --listen=-

Build Summary: 0/3 steps succeeded (1 failed)
install transitive failure
└─ install sigexec transitive failure
   └─ compile exe sigexec Debug aarch64-linux-gnu 1 errors

error: the following build command failed with exit code 1:
.zig-cache/o/67193547626d5926c67528227a7bd99d/build /nix/store/5x5y75rc3l43ic0lwal6wzk7wi1ga3m1-zig-0.16.0/bin/zig /nix/store/5x5y75rc3l43ic0lwal6wzk7wi1ga3m1-zig-0.16.0/lib/zig /home/edwlan/git_repos/github.com/fiddlerwoaroof/sigexec .zig-cache /home/edwlan/.cache/zig --seed 0xbd5ab3da -Z43779baa779c0884 -Dtarget=aarch64-linux-gnu
